--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "lab9",
+  "name": "ass3-2-mohsen_evgeny",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "start_Task": "nodemon codes/task/main.js",
-    "start_solution": "nodemon codes/solution/main.js",
-    "start": "nodemon codes/solution/main.js"
+    "start": "node main.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +14,7 @@
     "bcrypt": "^4.0.1",
     "client-sessions": "^0.8.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
